[metadata]
name = torchchem 
author = torchchem contributors
summary = PyTorch models for deep chemistry.
home-page = https://github.com/deepchem/torchchem
license = MIT
version = 0.0.1
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils
[files]
packages =
    torchchem 
